--- a/good (2).html
+++ b/good (2).html
@@ -743,7 +743,7 @@
                 
                 <div class="audio-section">
                     <div class="audio-controls">
-                        <button class="play-button" onclick="playAudio('hume', event)">
+                        <button class="play-button" onclick="playAudio(hume-pain-assessment.mp3)">
                             <svg class="speaker-icon" viewBox="0 0 24 24">
                                 <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
                             </svg>
@@ -1119,21 +1119,21 @@ const response = await cartesia.sonic({
         // Audio file mapping (backend integration point)
         const audioUrls = {
             'hume': {
-                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/hume-pain-assessment.mp3.wav',
+                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/hume-pain-assessment.mp3',
                 'medication-confusion': '/api/audio/hume-medication-confusion.mp3',
                 'mental-health': '/api/audio/hume-mental-health.mp3',
                 'post-op': '/api/audio/hume-post-op.mp3',
                 'pediatric': '/api/audio/hume-pediatric.mp3'
             },
             'elevenlabs': {
-                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/elevenlabs-pain-assessment.wav',
+                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/elevenlabs-pain-assessment.mp3',
                 'medication-confusion': '/api/audio/elevenlabs-medication-confusion.mp3',
                 'mental-health': '/api/audio/elevenlabs-mental-health.mp3',
                 'post-op': '/api/audio/elevenlabs-post-op.mp3',
                 'pediatric': '/api/audio/elevenlabs-pediatric.mp3'
             },
             'cartesia': {
-                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/cartesia-pain-assessment.wav',
+                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/cartesia-pain-assessment.mp3',
                 'medication-confusion': '/api/audio/cartesia-medication-confusion.mp3',
                 'mental-health': '/api/audio/cartesia-mental-health.mp3',
                 'post-op': '/api/audio/cartesia-post-op.mp3',
