--- a/good (3).html
+++ b/good (3).html
@@ -1113,21 +1113,21 @@ const response = await cartesia.sonic({
         // Audio file mapping (backend integration point)
         const audioUrls = {
             'hume': {
-                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/hume-pain-assessment.mp3.wav',
+                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/hume-pain-assessment.mp3',
                 'medication-confusion': '/api/audio/hume-medication-confusion.mp3',
                 'mental-health': '/api/audio/hume-mental-health.mp3',
                 'post-op': '/api/audio/hume-post-op.mp3',
                 'pediatric': '/api/audio/hume-pediatric.mp3'
             },
             'elevenlabs': {
-                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/elevenlabs-pain-assessment.wav',
+                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/elevenlabs-pain-assessment.mp3',
                 'medication-confusion': '/api/audio/elevenlabs-medication-confusion.mp3',
                 'mental-health': '/api/audio/elevenlabs-mental-health.mp3',
                 'post-op': '/api/audio/elevenlabs-post-op.mp3',
                 'pediatric': '/api/audio/elevenlabs-pediatric.mp3'
             },
             'cartesia': {
-                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/cartesia-pain-assessment.wav',
+                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/cartesia-pain-assessment.mp3',
                 'medication-confusion': '/api/audio/cartesia-medication-confusion.mp3',
                 'mental-health': '/api/audio/cartesia-mental-health.mp3',
                 'post-op': '/api/audio/cartesia-post-op.mp3',
