--- a/good (3).html
+++ b/good (3).html
@@ -737,7 +737,7 @@
                 
                 <div class="audio-section">
                     <div class="audio-controls">
-                        <button class="Play" onclick="playHumeAudio()">
+                        <button class="play-button" onclick="playHumeAudio()">
                             <svg class="speaker-icon" viewBox="0 0 24 24">
                                 <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
                             </svg>
