--- a/good (7).html
+++ b/good (7).html
@@ -1113,7 +1113,7 @@ const response = await cartesia.sonic({
         // Audio file mapping (backend integration point)
         const audioUrls = {
             'hume': {
-                'pain-assessment': 'https://github.com/dhwaniigarg/demo-/raw/main/hume-pain-assessment.mp3',
+                'pain-assessment': 'https://raw.githubusercontent.com/dhwaniigarg/demo-/main/hume-pain-assessment.mp3',
                 'medication-confusion': '/api/audio/hume-medication-confusion.mp3',
                 'mental-health': '/api/audio/hume-mental-health.mp3',
                 'post-op': '/api/audio/hume-post-op.mp3',
