--- a/good (9).html
+++ b/good (9).html
@@ -859,7 +859,8 @@ const response = await hume.evi.chat({
                 
                 <div class="audio-section">
                     <div class="audio-controls">
-                        <button class="play-button" onclick="playAudio('elevenlabs', event)">
+                           <audio id="elevenlabs-audio" src="elevenlabs-pain-assessment.mp3"></audio>
+                            <button class="play-button" onclick="document.getElementById('elevenlabs-audio').play()">
                             <svg class="speaker-icon" viewBox="0 0 24 24">
                                 <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
                             </svg>
@@ -976,7 +977,8 @@ const audio = await elevenlabs.generate({
                 
                 <div class="audio-section">
                     <div class="audio-controls">
-                        <button class="play-button" onclick="playAudio('cartesia', event)">
+                        <audio id="cartesia-audio" src="cartesia-pain-assessment.mp3"></audio>
+                            <button class="play-button" onclick="document.getElementById('cartesia-audio').play()">
                             <svg class="speaker-icon" viewBox="0 0 24 24">
                                 <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
                             </svg>
